# WEB_labs

./: .gitignore  CMakeLists.txt  README.md  build-all.sh  compile-debug.sh  compile-release.sh  init-cfg.sh  run-client.sh  run-multi.sh  run-single.sh
client/: config.ini
server/: CMakeLists.txt  gen.h  multi.cpp  single.cpp
server_multithread/: CMakeLists.txt  main.cpp
server_singlethread/: CMakeLists.txt  main.cpp
src/: client.cpp  msg.hpp  server.cpp
src/client/: client.py
src/server_singlethread/: main.cpp
